--- a/public_html/hadogun_common/main.css
+++ b/public_html/hadogun_common/main.css
@@ -13,9 +13,16 @@
     width: 420px;
     border-bottom: 1px solid black;
     background-color: transparent;
-    font-size: 10pt;
+    font-size: 8pt;
     color: #EEEEEE;
 }
+
+#tweet-list li a{
+    font-size: 8pt;
+    color: #EEEEEE;
+    text-decoration: none;
+}
+
 
 #tweet-list li:after{
     content: ".";
