--- a/public_html/hadogun_common/main.css
+++ b/public_html/hadogun_common/main.css
@@ -6,14 +6,13 @@
     padding:0px;
     overflow: hidden;
     margin:0px;
-    margin-top:45px;
+    margin-top:40px;
 }
 
 #tweet-list li{
     width: 420px;
-    border-bottom: 1px solid black;
     background-color: transparent;
-    font-size: 8pt;
+    font-size: 8px;
     color: #EEEEEE;
 }
 
